Added Accesbility Activity, changed some default icons and some optimization

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'//lifecycleScope
 
     implementation 'com.github.f0ris.sweetalert:library:1.6.2' //sweetAlert
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0' //circleImageView
 }
