--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.bangkit.capstone"
         minSdk 21
         targetSdk 31
-        versionCode 6
-        versionName "2.5"
+        versionCode 7
+        versionName "2.6-beta01"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
